@@ -20,9 +20,6 @@
         - manual tweetmarker
         - mute users for a time period
         - update trends
-        - mute client doesn't account for retweets (if it is retweet, get the source of the original tweet)
-        - pictures in direct messages may have had a url change
-        - pick time and pick date strings not available
 
     Version 2.6.0
         - More fragments to choose from
